--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@ body {
 
 .container {
   display: flex;
-  flex-wrap: wrap; /* KLUCZOWE! */
+  flex-direction: row;
   max-width: 1200px;
   margin: auto;
   padding: 40px 20px;
